@@ -3210,6 +3210,13 @@ X509_get_pubkey(X509 *x)
 ASN1_INTEGER *
 X509_get_serialNumber(X509 *x)
 
+#if (OPENSSL_VERSION_NUMBER >= 0x1010000fL && !defined(LIBRESSL_VERSION_NUMBER)) || (LIBRESSL_VERSION_NUMBER >= 0x2080100fL)
+
+const ASN1_INTEGER *
+X509_get0_serialNumber(const X509 *x)
+
+#endif
+
 int
 X509_set_serialNumber(X509 *x, ASN1_INTEGER *serial)
 
